--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,14 @@
-<h1>Projects</h1>
+<div class="pb-2 mt-4 mb-2 border-bottom">
+  <h1>Projects</h1>
 
-<%= link_to 'Create Project', new_project_path %>
+  <ul class="actions">
+    <li>
+      <%= link_to fa_icon("plus") + " New Project", new_project_path, class: "btn btn-success" %>
+    </li>
+  </ul>
+</div>
+
+
 
 <div class="projects">
   <% @project.each do |project| %>
