Add sign in and sign out

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,23 @@
       <% end %>
 
       <div class="text-center">
-        <%= link_to "Sign up", new_user_registration_path %>
-
+        <ul>
+          <li><%= link_to "Home", root_path %></li>
+          <% unless user_signed_in? %>
+            <li class="<%= 'active' if current_page?('/users/sign_up')%>"><%= link_to "Sign up", new_user_registration_path, class: "nav-link" %></li>
+            <li class="<%= 'active' if current_page?('/users/sign_in') %>"><%= link_to "Sign in", new_user_session_path, class: "nav-link" %></li>
+          <% end %>
+        </ul>
       </div>
+
+      <% if user_signed_in? %>
+        <div class="navbar-right">
+          <p class="navbar-text">
+            Signed in as <%= current_user.email %>
+          </p>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-outline-danger ml-1" %>
+        </div>
+      <% end %>
 
       <%= yield %>
     </div>
